# MPG-AL-READTHEDOCS

./: .doc8.ini  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
docs/: .readthedocs.yaml  Makefile  README.md  requirements.txt
docs/source/: .variables.rst  ansiblelockdown_docs.py  arm64-guide.rst  conf.py  container-guide.rst  contributing.rst  controls-contrib.rst  controls.rst  customization.rst  developer-guide.rst  documentation.rst  getting_started copy.rst  getting_started.rst  glossary.rst  index.rst  index_orig.rst  intro.rst  known_issues.rst  layout.MD  links.rst  remediate.rst  support.rst
docs/source/CIS/: CIS_advanced.rst  CIS_table copy.rst  CIS_table.rst  benchmarks_CIS.rst  cis_overview.rst
docs/source/STIG/: STIG_table.rst  benchmarks_STIG.rst  stig_overview.rst
docs/source/audit/: Security_remediation_and_auditing.md  audit-faq.rst  audit_development.rst  getting-started-audit.rst
docs/source/combined/: comb-faq.rst  comb-getting-started.rst  release_sched.rst
docs/source/remediate/: rem-faq.rst  rem-getting-started.rst  rem-modifying.rst  rem_development.rst
requirements/: requirements-dev.txt  requirements.txt
