[project]
name = "ansible-lockdown-docs"
version = "2026.1.0"
description = "Documentation for Ansible Lockdown security benchmarks"
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MindPoint Group", email = "info@mindpointgroup.com"},
]
keywords = ["ansible", "security", "compliance", "CIS", "STIG", "documentation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://ansible-lockdown.readthedocs.io"
Repository = "https://github.com/ansible-lockdown"
Documentation = "https://ansible-lockdown.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.doc8]
paths = ["docs/source"]
extensions = [".rst"]
ignore = ["D001"]
max-line-length = 0
ignore-path = ["docs/build", "docs/source/_static", "docs/source/_templates"]

[tool.rstcheck]
ignore_directives = ["toctree", "include", "literalinclude"]
ignore_roles = ["ref", "doc"]
report_level = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
